2009-12-05  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el (complete-symbol): Call semantic-ia-complete-symbol
	if possible.

	* cedet/semantic/ia.el (semantic-ia-complete-symbol): Make
	argument optional.

	* shell.el (shell): Require ansi-color (Bug#5113).

	* ansi-color.el (ansi-color-for-comint-mode): Default to t.

	* hl-line.el (global-hl-line-highlight): Minor doc fix (Bug#4925).

2009-12-05  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-hack-hook)
	(c-postprocess-file-styles): Revert change 1.85 to permit
	`c-file-style' to work again.  This reversion restores the current
	software to its state in Emacs 23.1.  (Bug#4146)

2009-12-05  Kevin Ryde  <user42@zip.com.au>

	* textmodes/sgml-mode.el (sgml-lexical-context): Recognise
	comment-start-skip to comment-end-skip as comment (Bug#4781).

2009-12-05  Juri Linkov  <juri@jurta.org>

	* info.el (Info-find-node-2): Set `Info-current-subfile' to nil
	for virtual nodes.  (Bug#4147)
	(Info-find-node-2): Set `Info-current-node-virtual' to nil
	when moving from a virtual node.
	(Info-mode-menu): Add `Info-virtual-index' to the menu.
	(Info-mode): Add `Info-virtual-index' to the docstring.

2009-12-05  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/bovine/c.el (semantic-c-describe-environment):
	Describe project macro symbols.

	* cedet/semantic/complete.el (semantic-complete-do-completion):
	Don't call semantic-collector-current-exact-match.

	* cedet/ede.el (ede-apply-preprocessor-map): Accept lists of
	ede-objects as targets.

	* cedet/ede/pmake.el (ede-proj-makefile-insert-variables): Output
	a target's object list even if compiler vars are already in the
	Makefile.

	* cedet/ede/emacs.el (ede-preprocessor-map): Add config.h to the
	list of headers producing necessary macros.

2009-12-05  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-map-entries): Use marker to keep
	track of the buffer position of the end of a BibTeX entry as this